--- a/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/proxy.adoc
@@ -278,7 +278,7 @@ Note that `OCIS_CLAIM_MANAGED_SPACES_MAPPING` can be omitted if roles in the cla
 
 == Multi Instance Infinite Scale
 
-Infinite Scale can be used to configure multi-instance environments. This allows multiple instances to connect to the same IDP. Without this configuration, only one-to-one setups are possible. The environment variables to configure such a setup start with `OCIS_MULTI_INSTANCE_xxx`. Since this setup requires in-depth knowledge of the environment, only a configuration example can be provided, which can be found at: https://github.com/owncloud/ocis/tree/master/deployments/examples/ocis_multi[Multi Instance Deployment Example,window=_blank].
+Infinite Scale can be used to configure multi-instance environments. This allows multiple instances to connect to the same external IDP. Without this configuration, only one-to-one setups are possible. The environment variables to configure such a setup start with `OCIS_MULTI_INSTANCE_xxx`. Since this setup requires in-depth knowledge of the environment, only a configuration example can be provided, which can be found at: https://github.com/owncloud/ocis/tree/master/deployments/examples/ocis_multi[Multi Instance Deployment Example,window=_blank].
 
 == Recommendations for Production Deployments
 
