Prepare for ocis 8.0

--- a/modules/ROOT/pages/deployment/services/env-var-changes.adoc
+++ b/modules/ROOT/pages/deployment/services/env-var-changes.adoc
@@ -1,14 +1,16 @@
 # Changed Environment Variables in Versions
 :toc: right
-:description: This page contains tables with added and removed environment variables between Infinite Scale version 7.2.0 and 7.3.0.
+:description: This page contains tables with added and removed environment variables between Infinite Scale version 7.3.0 and 8.0.0.
 
 :source_path: {ocis_services_raw_url}{service_url_component}{ocis_services_env_var_deltas_path}
 
 ////
+to be set in antora.yml
+
 ocis_services_raw_url:             https://raw.githubusercontent.com/owncloud/ocis/
-service_url_component:             docs || docs-stable-7.3
+service_url_component:             docs || docs-stable-8.0
 ocis_services_env_var_deltas_path: /services/general-info/envvars/env-var-deltas/
-env_var_delta_name:                7.2.0-7.3.0
+env_var_delta_name:                7.3.0-8.0.0
 ////
 
 == Introduction
