--- a/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
+++ b/modules/ROOT/partials/depl-examples/ubuntu-compose/shared-setup.adoc
@@ -340,6 +340,19 @@ If you expect a higher amount of data in the instance, consider using own paths 
 * `SMTP_xxx` +
 Define these settings according to your email configuration. If the settings are defined, Infinite Scale will be able to send notifications to users. If the settings are not defined, Infinite Scale will start but won't be able to send notifications.
 
+* `OCIS_TRACING_ENABLED`, `OCIS_TRACING_TYPE` and `OCIS_TRACING_ENDPOINT` +
+Enable OpenTelemetry tracing and configure the OTLP endpoint.
+For SigNoz, set:
++
+----
+OCIS_TRACING_ENABLED=true
+OCIS_TRACING_TYPE=otlp
+OCIS_TRACING_ENDPOINT=signoz-otel-collector:4317
+----
+
+NOTE: The `OCIS_TRACING_ENDPOINT` must be reachable from the oCIS Docker network. When using SigNoz with Docker Compose, this is typically the
+`signoz-otel-collector` service.
+
 NOTE: If you do not define your own domain names, only domain names with self-signed certificates are automatically used for internal evaluation.
 
 NOTE: Additional options can be configured like web applications. These should be configured _after_ the deployment has successfully started without problems. This makes it easier to find any initial startup issues that need to be resolved first.
